# tfliteInferenceAndroid

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/conversationclassifier/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: all_conversations_tokenizer.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/conversationclassifier/: App.kt  DJLTokenizer.java  GLiNERInfer.java  TFLiteInferenceEngine.java
app/src/main/java/com/example/conversationclassifier/data/: ChatRepository.kt
app/src/main/java/com/example/conversationclassifier/electra/: BasicTokenizer.java  BertTokenizer.java  Tokenizer.java  TokenizerUtils.java  WordpieceTokenizer.java
app/src/main/java/com/example/conversationclassifier/ui/: ChatScreen.kt  MainActivity.kt
app/src/main/java/com/example/conversationclassifier/viewmodel/: ChatViewModel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/conversationclassifier/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
